Sales Base Design done

--- a/Css/Style.css
+++ b/Css/Style.css
@@ -127,8 +127,21 @@ body{
 .bg-primary, .badge-primary{
   background-color: #7F2AFF;
 }
+.bg-info, .badge-info{
+  background-color: #4786FF;
+}
 .text-primary{
   color: #7F2AFF;
+}
+
+.text-info{
+  color: #4786FF;
+}
+.text-small{
+  font-size: .9em;
+}
+.light-shadow-primary{
+  box-shadow: 0 5px 20px rgba(127, 42, 255, .3);
 }
 button:hover{
   cursor: pointer;
@@ -139,36 +152,38 @@ button:hover{
 /* btn info */
 .btn.btn-info{
   background-color: #4786FF;
-  box-shadow: 0 5px 15px rgba(71, 134, 255, .6);
+  box-shadow: 0 5px 15px rgba(71, 134, 255, .3);
 }
 .btn.btn-info:hover{
   background-color: #2A73FB;
   border-color: #4786FF;
 }
 /* btn primary */
-.btn.btn-primary{
+.btn.btn-primary, .btn-outline-primary:not([disabled]):not(.disabled).active{
   background-color: #7F2AFF;
-  box-shadow: 0 5px 15px rgba(127, 42, 255, .6);
+  box-shadow: 0 5px 15px rgba(127, 42, 255, .3);
 }
-.btn.btn-primary:hover{
+.btn.btn-primary:hover, .btn-outline-primary:not([disabled]):not(.disabled):hover{
   background-color: #6313D9;
   border-color: #7F2AFF;
 }
 /* btn success */
-.btn.btn-success{
+.btn.btn-success, .btn-outline-success:not([disabled]):not(.disabled).active{
   background-color: #0DE391;
-  box-shadow: 0 5px 15px rgba(13, 227, 145, .6);
+  border-color: #0DE391;
+  box-shadow: 0 5px 15px rgba(13, 227, 145, .3);
 }
-.btn.btn-success:hover{
+.btn.btn-success:hover, .btn-outline-success:not([disabled]):not(.disabled):hover{
   background-color: #14B376;
   border-color: #0DE391;
 }
 /* btn danger */
-.btn.btn-danger{
+.btn.btn-danger, .btn-outline-danger:not([disabled]):not(.disabled).active{
   background-color: #FF2A55;
-  box-shadow: 0 5px 15px rgba(255, 42, 85, .6);
+  box-shadow: 0 5px 15px rgba(255, 42, 85, .3);
+  border-color: #FF2A55;
 }
-.btn.btn-danger:hover{
+.btn.btn-danger:hover, .btn-outline-danger:not([disabled]):not(.disabled):hover{
   background-color: #EF1541;
   border-color: #FF2A55;
 }
