--- a/Css/Style.products.css
+++ b/Css/Style.products.css
@@ -17,6 +17,9 @@ h2{
 .rounded-30{
   border-radius: 30px;
 }
+.rounded-5{
+  border-radius: 5px;
+}
 
  #productsList table button.btn:hover, #productsList table button.btn:focus, button.btn.sort.asc, button.btn.sort.desc {
   background-color: rgba(0,0,0,.05);
@@ -87,4 +90,10 @@ h2{
 }
 .slick-current .card-body .badge-primary{
   background-color: #FFA387;
+}
+
+/* orders */
+.order-serial {
+  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.05);
+  border-top: 1px dashed #ddd;
 }
