--- a/Css/Style.css
+++ b/Css/Style.css
@@ -21,10 +21,13 @@ html, body{
   width: 100%;
   height: 100%;
 }
+.bg-default-9{
+  background-color: rgba(245,247,250, .9);
+}
 body{
   background-color: #F5F7FA;
   font-size: 15px;
-  font-family: 'Poppins', sans-serif;
+  /* font-family: 'Poppins', sans-serif; */
 }
 .bg-none{
   background: transparent !important;
@@ -96,7 +99,12 @@ body{
   -moz-text-shadow: 0 0 10px rgba(127, 42, 255, .2);
   -webkit-text-shadow: 0 0 10px rgba(127, 42, 255, .2);
 }
-
+.bigsearch{
+  font-size: 3em;
+}
+.bigsearch:focus{
+  box-shadow: none;
+}
 .navbar-nav .nav-item a.nav-link.active:after{
   content: '';
   width: 6px;
