--- a/Css/Style.css
+++ b/Css/Style.css
@@ -29,6 +29,9 @@ body{
   font-size: 15px;
   font-family: 'Poppins', sans-serif;
 }
+.modal{
+  /* z-index: 1010; */
+}
 .bg-none{
   background: transparent !important;
 }
