--- a/Css/Style.css
+++ b/Css/Style.css
@@ -28,6 +28,7 @@ body{
   background-color: #F5F7FA;
   font-size: 15px;
   font-family: 'Poppins', sans-serif;
+  overflow-x: hidden;
 }
 .modal{
   /* z-index: 1010; */
