display suggestion and append them done

--- a/Css/Style.products.css
+++ b/Css/Style.products.css
@@ -137,7 +137,10 @@ h2{
   width: 600px;
 }
 .order-form-product-added{
-  height: 170px;
+
+}
+.order-form-product-added{
+  height: 320px;
 }
 .product-ordered-list{
   height: 150px;
